--- a/busca-api/src/App.css
+++ b/busca-api/src/App.css
@@ -1,6 +1,6 @@
 *{
   margin: 0px;
-  
+  background-color:rgb(197, 154, 129) ;
 }
 nav{
   height: 100px;
@@ -51,6 +51,20 @@ nav{
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(3, 1fr);
+}
+
+.pokemon-card{
+  display: flex;
+  box-shadow: 4px 4px 4px (0,0,0,0.25);
+  border-radius: 3px;
+}
+.pokemon-image{
+  width: 70px;
+  height: 70px;
+  margin-right: 10px;
+}
+.pokemon-image-container{
+  padding: 0px 5px;
 }
 
 .App {
