--- a/busca-api/src/App.css
+++ b/busca-api/src/App.css
@@ -1,6 +1,6 @@
 *{
   margin: 0px;
-  background-color:rgb(197, 154, 129) ;
+  background-color:rgba(111, 111, 111) ;
 }
 nav{
   height: 100px;
@@ -66,7 +66,35 @@ nav{
 .pokemon-image-container{
   padding: 0px 5px;
 }
-
+.card-body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 10px 10px 10px 0px ;
+  flex: 1;
+}
+.card-top{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.card-top h3 {
+   text-transform: capitalize;
+}
+.card-button{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content:space-between;
+}
+.pokemon-type{
+  display: flex;
+}
+.pokemon-type-text{
+  margin-right: 10px;
+  text-transform: capitalize;
+}
 .App {
   text-align: center;
 }
