--- a/busca-api/src/App.css
+++ b/busca-api/src/App.css
@@ -1,6 +1,6 @@
 *{
   margin: 0px;
-  background-color:rgb(226, 225, 225) ;
+  background-color:rgb(8, 250, 141) ;
 }
 nav{
   height: 100px;
@@ -94,6 +94,12 @@ nav{
 .pokemon-type-text{
   margin-right: 10px;
   text-transform: capitalize;
+}
+.pagination-container{
+  color: rgba(0, 0, 0, 0.941);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 .App {
   text-align: center;
