--- a/busca-api/src/App.css
+++ b/busca-api/src/App.css
@@ -55,7 +55,7 @@ nav{
 
 .pokemon-card{
   display: flex;
-  box-shadow: 4px 4px 4px (0,0,0,0.25);
+  box-shadow: 4px 4px 4px rgba(0,0,0,0.5);
   border-radius: 3px;
 }
 .pokemon-image{
@@ -101,6 +101,20 @@ nav{
   flex-direction: row;
   align-items: center;
 }
+.not-found{
+ text-align: center;
+ font-size: 1.25rem;
+ padding: 20px;
+}
+.pokemon-heart-btn{
+  border: none;
+  background-color: white;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.25);
+  padding: 4px;
+  cursor: pointer;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
